--- a/caravan/index.html
+++ b/caravan/index.html
@@ -7,11 +7,20 @@
   <title>CARAVAN</title>
 </head>
 <body>
-  <!-- header用のdiv -->
-  <div class="header">
-  	<div class="header-top"></div>
-  	<div class="header-bottom"></div>
-  </div>
+  <!-- header用 -->
+  <header>
+  	<h1 class="headline">
+  		<a href="index.html">CARAVAN</a>
+  </header>
+  <nav>
+  	<ul class="nav-list">
+		<li class="nav-list-item">
+			<a href="index.html">Home</a>
+		</li>
+		<li class="nav-list-item">About</li>
+		<li class="nav-list-item">Topic</li>
+  	</ul>
+  </nav>
   <!-- main-visual用のdiv -->
   <div class="main-visual">
   	<div class="main-visual-content"></div>
@@ -22,6 +31,8 @@
   	<div class="sidebar"></div>
   </div>
   <!-- footer用のdiv -->
-  <div class="footer"></div>
+  <footer>
+  	<p class="fotter-text">© All rights reserved by Infratop.Inc.</p>
+  </footer>
 </body>
 </html>
