--- a/caravan/問3.html
+++ b/caravan/問3.html
@@ -7,9 +7,16 @@
   <title>問3</title>
 </head>
 <body>
-  <div class="boxes clearfix">
-    <div class="box1"></div>
-    <div class="box2"></div>
-  </div>
+　<header>
+	<h1 class="headline">EXAMPLE</h1>
+	<nav class="nav">
+		<ol class="list">
+			<li class="lisy-item">MENU 1</li>
+			<li class="lisy-item">MENU 2</li>
+			<li class="lisy-item">MENU 3</li>
+			<li class="list-item">MENU 4</li>
+		</ol>
+	</nav>
+</header>
 </body>
 </html>
