--- a/caravan/index.html
+++ b/caravan/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <!-- CSSファイルの読み込み -->
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/82af849a43.js" crossorigin="anonymous"></script>
   <title>CARAVAN</title>
 </head>
 <body>
@@ -12,6 +13,11 @@
     <h1 class="headline">
       <a href="index.html">CARAVAN</a>
     </h1>
+    <div class="social">
+      <i class="fab fa-facebook-square"></i>
+      <i class="fab fa-twitter-square"></i>
+      <i class="fab fa-instagram"></i>
+    </div>
   </header>
   <nav>
     <ul class="nav-list">
